--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <br>
     <table align="center" border="0" cellpadding="5px" cellspacing="0xp" width="35%">
         <tr>
-            <td><center><a href="https://allisonperdomo03.github.io/PaginaPrincipal/">Pagina Principal</a></center></td>
+            <td><center><a href="https://allisonperdomo03.github.io/PaginaP/">Pagina Principal</a></center></td>
             <td><center><a href="https://allisonperdomo03.github.io/Blog/">Blog</a></center></td>
-            <td><center><a href="https://allisonperdomo03.github.io/Cancionesfav/">Canciones Favoritos</a></center></td>
+            <td><center><a href="https://allisonperdomo03.github.io/Canciones/">Canciones Favoritos</a></center></td>
         </tr>
     </table>
     <br>
