--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
 </head>
-<body bgcolor =" #6495ED ">
+<body bgcolor =" #FF6347 ">
     <br>
     <table align="center" border="0" cellpadding="5px" cellspacing="0xp" width="35%">
         <tr>
